# fastapi-task-queue

./: README.md  main.py  pyproject.toml
tests/: test_main.py
